[project]
name = "sdev265-project-master"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "django==5.2a1",
    "gunicorn==23.0.0",
    "packaging==24.2",
    "pillow==11.1.0",
    "sqlparse==0.5.3",
    "tzdata==2025.1",
    "whitenoise==6.9.0",
]
